[tool.poetry]
name = "text-to-sql"
version = "0.1.0"
description = "Text-to-SQL research"
authors = ["The PICARD authors"]

[tool.poetry.dependencies]
python = "^3.8"
cython = "^0.29.23"
six = "^1.15.0"

datasets = "1.5.0"
nltk = "3.6.2"
pyyaml = "^5.4"
sentencepiece = "0.1.95"
tenacity = "^7.0.0"
rapidfuzz = "1.4.1"
alive_progress = "^1.6.2"
sqlparse = "^0.4.1"
jsonnet = "^0.17.0"

pillow = "8.3.2"
transformers = { rev = "96d1cfb13db094d1468883060ec2d4471f63fd01", git = "https://github.com/huggingface/transformers" }
deepspeed = { version = "0.4.2", optional = true }
torch = { version = "1.8.1", optional = true }

fastapi = "^0.65.1"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-check = "^1.0.1"
isort = "^5.6.4"
autopep8 = "^1.5.4"
wandb = "^0.10.30"
black = "^20.8b1"
mypy = "^0.790"
flake8 = "^3.8.4"
codalab = "^0.5.53"

[tool.poetry.extras]
torch = ["torch"]
deepspeed = ["deepspeed"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
known_first_party = ["tests"]
default_section = "THIRDPARTY"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
