[tool.poetry]
name = "picard"
version = "1.0.0"
description = "PICARD - Parsing Incrementally for Constrained Auto-Regressive Decoding from Language Models"
authors = ["Torsten Scholak <torsten.scholak@servicenow.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ElementAI/picard"

[tool.poetry.dependencies]
python = "^3.7"
cython = "^0.29.23"
six = "^1.15.0"

datasets = "^1.12.1"
nltk = "^3.6.3"
pyyaml = "^5.4"
sentencepiece = "0.1.96"
tenacity = "^8.0.1"
rapidfuzz = "^1.6.1"
alive_progress = "^2.0.0"
sqlparse = "^0.4.2"

pillow = "8.3.2"
transformers = "^4.11.3"
deepspeed = { version = "0.5.3", optional = true }
torch = { version = "1.9.0", optional = true }

fastapi = "^0.68.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-check = "^1.0.2"
isort = "^5.9.3"
autopep8 = "^1.5.7"
wandb = "^0.12.4"
black = "^21.9b0"
mypy = "^0.910"
flake8 = "^3.9.2"
# codalab = "1.1.1"

[tool.poetry.extras]
torch = ["torch"]
deepspeed = ["deepspeed"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
known_first_party = ["tests"]
default_section = "THIRDPARTY"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
