[tool.poetry]
name = "picard"
version = "1.0.0"
description = "PICARD - Parsing Incrementally for Constrained Auto-Regressive Decoding from Language Models"
authors = ["Torsten Scholak <torsten.scholak@servicenow.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ElementAI/picard"

[tool.poetry.dependencies]
python = "^3.7"
cython = "^0.29.26"
six = "^1.16.0"

datasets = "^1.12.1"
nltk = "^3.6.7"
pyyaml = "^6.0"
sentencepiece = "0.1.96"
tenacity = "^8.0.1"
rapidfuzz = "^1.9.1"
alive_progress = "^2.1.0"
sqlparse = "^0.4.2"

pillow = "9.0.0"
transformers = "^4.15.0"
deepspeed = { version = "0.5.9", optional = true }
torch = { version = "1.9.0", optional = true }

fastapi = "^0.71.0"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-check = "^1.0.4"
isort = "^5.10.1"
autopep8 = "^1.6.0"
wandb = "^0.12.9"
black = "^21.12b0"
mypy = "^0.931"
flake8 = "^4.0.1"
# codalab = "1.4.1"

[tool.poetry.extras]
torch = ["torch"]
deepspeed = ["deepspeed"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
known_first_party = ["tests"]
default_section = "THIRDPARTY"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
