cabal-version: 2.0

name:           picard
version:        0.2
synopsis:       PICARD - Parsing Incrementally for Constrained Auto-Regressive Decoding from Language Models
build-type:     Simple

library
  exposed-modules:
      Language.SQL.SpiderSQL
      Language.SQL.SpiderSQL.Lexer
      Language.SQL.SpiderSQL.Parse
      Language.SQL.SpiderSQL.Prelude
      Language.SQL.SpiderSQL.Syntax
      Paths_picard
  autogen-modules:
      Paths_picard
  hs-source-dirs:
      src/
  default-extensions: DeriveDataTypeable ExistentialQuantification FlexibleInstances KindSignatures LambdaCase MagicHash RankNTypes RecordWildCards ScopedTypeVariables TypeSynonymInstances DataKinds DeriveGeneric DerivingStrategies DeriveAnyClass DerivingVia GeneralizedNewtypeDeriving FlexibleContexts TypeApplications ConstraintKinds MultiParamTypeClasses TupleSections
  ghc-options: -W -Wall
  build-depends:
      QuickCheck
    , attoparsec
    , aeson
    , base
    , bytestring
    , containers
    , data-default
    , deepseq
    , generic-lens
    , ghc >=8.10.4 && <8.11
    , hashable
    , lens
    , mtl
    , parsers
    , picard-gen-hs
    , STMonadTrans
    , text
    , fb-util
    , thrift-cpp-channel
    , thrift-lib
    , thrift-server
    , transformers
    , unordered-containers
    , vector
  default-language: Haskell2010

executable picard
  main-is: Main.hs
  other-modules:
      Paths_picard
  autogen-modules:
      Paths_picard
  hs-source-dirs:
      exe/
  default-extensions: DeriveDataTypeable ExistentialQuantification FlexibleInstances KindSignatures LambdaCase MagicHash RankNTypes RecordWildCards ScopedTypeVariables TypeSynonymInstances DataKinds DeriveGeneric DerivingStrategies DeriveAnyClass DerivingVia GeneralizedNewtypeDeriving FlexibleContexts TypeApplications ConstraintKinds MultiParamTypeClasses TupleSections
  ghc-options: -W -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      async
    , attoparsec
    , base
    , bytestring
    , containers
    , http-client
    , http-client-tls
    , ghc >=8.10.4 && <8.11
    , mtl
    , picard
    , picard-gen-hs
    , SafeSemaphore
    , Stack
    , stm
    , text
    , fb-util
    , thrift-cpp-channel
    , thrift-lib
    , thrift-server
    , tokenizers
    , unordered-containers
    , vector
  default-language: Haskell2010

test-suite picard-doctest
  type: exitcode-stdio-1.0
  main-is: Doctest.hs
  hs-source-dirs:
      test
  default-extensions: DeriveDataTypeable ExistentialQuantification FlexibleInstances KindSignatures LambdaCase MagicHash RankNTypes RecordWildCards ScopedTypeVariables TypeSynonymInstances DataKinds DeriveGeneric DerivingStrategies DeriveAnyClass DerivingVia GeneralizedNewtypeDeriving FlexibleContexts TypeApplications ConstraintKinds MultiParamTypeClasses TupleSections
  ghc-options: -W -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Glob
    , attoparsec
    , base
    , containers
    , doctest
    , ghc >=8.10.4 && <8.11
    , mtl
    , picard
    , picard-gen-hs
    , text
    , fb-util
    , thrift-cpp-channel
    , thrift-lib
    , thrift-server
    , unordered-containers
    , vector
  default-language: Haskell2010

test-suite picard-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Language.SQL.SpiderSQL.Academic
      Language.SQL.SpiderSQL.AssetsMaintenance
      Language.SQL.SpiderSQL.Bike1
      Language.SQL.SpiderSQL.Car1
      Language.SQL.SpiderSQL.Chinook1
      Language.SQL.SpiderSQL.ConcertSinger
      Language.SQL.SpiderSQL.DepartmentManagement
      Language.SQL.SpiderSQL.Flight1
      Language.SQL.SpiderSQL.Geo
      Language.SQL.SpiderSQL.Inn1
      Language.SQL.SpiderSQL.MatchSeason
      Language.SQL.SpiderSQL.Pets1
      Language.SQL.SpiderSQL.PhoneMarket
      Language.SQL.SpiderSQL.ProductCatalog
      Language.SQL.SpiderSQL.Scholar
      Language.SQL.SpiderSQL.StormRecord
      Language.SQL.SpiderSQL.TestItem
  hs-source-dirs:
      test
  default-extensions: DeriveDataTypeable ExistentialQuantification FlexibleInstances KindSignatures LambdaCase MagicHash RankNTypes RecordWildCards ScopedTypeVariables TypeSynonymInstances DataKinds DeriveGeneric DerivingStrategies DeriveAnyClass DerivingVia GeneralizedNewtypeDeriving FlexibleContexts TypeApplications ConstraintKinds MultiParamTypeClasses TupleSections
  ghc-options: -W -Wall
  build-depends:
      attoparsec
    , base
    , containers
    , ghc >=8.10.4 && <8.11
    , hedgehog
    , mtl
    , picard
    , picard-gen-hs
    , tasty
    , tasty-hunit
    , text
    , fb-util
    , thrift-cpp-channel
    , thrift-lib
    , thrift-server
    , unordered-containers
    , vector
  default-language: Haskell2010
